installer script was refactored